# ActiveNow

./: .dockerignore  .env.example  .gitignore  AGENT.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: binaries.yml  docker.yml
hack/: test.html
src/: api.rs  config.rs  events.rs  gateway.rs  id.rs  main.rs  meta.rs  presence.rs  time.rs  ws.rs
