[package]
name = "activenow"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.6", features = ["ws", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6.1.0"
futures-util = "0.3"
nanoid = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
redis = { version = "0.32", features = ["aio", "tokio-comp", "connection-manager"] }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
